--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <header class="site-header" id="site-header">
         <div class="header-left">
             <div class="logo">TOMITO</div>
+            <button class="dropdown-toggle" id="dropdownToggle" aria-label="القائمة المنسدلة">
+                <span>التصنيفات</span>
+                <i class="dropdown-icon">▼</i>
+            </button>
             <a href="favorites.html" class="favorites-page-btn">
                 <i class="fas fa-heart"></i> المفضلة (<span id="favorites-count">0</span>)
             </a>
